[package]
name = "animejs-rs"
version = "0.1.1"
edition = "2021"
authors = ["obskur123"]
license = "MIT"
repository = "https://github.com/obskur123/animejs-rs"
description = "anime.js bindings for rust"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"

[dependencies.web-sys]
version = "0.3.4"
